# agent-chat

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent_chat_control_plane.py  agent_chat_dedupe.py  agent_chat_notify.py  agent_chat_outbound_lib.py  agent_chat_reply_lib.py  agent_imessage_control_plane.py  agent_imessage_dedupe.py  agent_imessage_notify.py  agent_imessage_outbound_lib.py  agent_imessage_reply_lib.py  codex_imessage_control_plane.py  codex_imessage_dedupe.py  codex_imessage_notify.py  codex_imessage_outbound_lib.py  codex_imessage_reply_lib.py  env.telegram.example  pyproject.toml
.github/workflows/: ci.yml
agent_chat/: __init__.py  config.py  control_plane.py  registry.py  types.py
agent_chat/adapters/: __init__.py  agent_base.py  claude.py  codex.py  discord.py  imessage.py  pi.py  telegram.py  transport_base.py
docs/: architecture.md  changelog.md  cleanup.md  control-plane.md  discord.md  index.md  security.md  troubleshooting.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/exec-plans/active/: 2026-03-29-multi-agent-pi-discord-plan.md  2026-03-31-discord-session-channel-mapping.md  2026-04-01-pi-discord-desktop-visibility-and-origin-aware-progress.md  2026-04-01-pi-discord-desktop-visibility-implementation-plan.md  2026-04-01-pi-discord-needs-input-ux-prd.md  2026-04-01-pi-discord-next-implementation-plan.md
docs/exec-plans/completed/: 2026-02-28-inbound-reply-no-pane-agent-choice.md  2026-03-01-telegram-topic-session-isolation.md  2026-03-31-guided-onboarding.md  2026-03-31-integration-ux-prd.md  2026-03-31-notification-controls-and-onboarding.md
examples/: com.agent-chat-control-plane.plist  com.agent-chat.plist  com.codex.imessage-control-plane.plist
scripts/: send-imessage.applescript  send-terminal-command.applescript  setup-agent-chat-easy.sh  setup-telegram-easy.sh  telegram-diagnose.sh
tests/: test_agent_chat_control_plane.py  test_agent_chat_module_compat.py  test_agent_chat_notify.py  test_agent_chat_outbound_lib.py  test_agent_chat_reply_lib.py  test_agent_imessage_module_compat.py  test_cleanup_docs.py  test_codex_imessage_control_plane.py  test_codex_imessage_notify.py  test_codex_imessage_outbound_lib.py  test_codex_imessage_reply_lib.py  test_docs_system_of_record.py  test_multi_agent_expansion.py
