[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-imessage-control-plane"
version = "0.1.0"
description = "macOS control-plane runtime bridging Codex sessions and iMessage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "codex-imessage-control-plane contributors" }
]
keywords = ["codex", "imessage", "macos", "automation", "control-plane"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example-org/agent-chat"
Repository = "https://github.com/example-org/agent-chat"
Issues = "https://github.com/example-org/agent-chat/issues"

[tool.setuptools]
py-modules = [
  "codex_imessage_control_plane",
  "codex_imessage_dedupe",
  "codex_imessage_notify",
  "codex_imessage_outbound_lib",
  "codex_imessage_reply_lib"
]

[project.scripts]
codex-imessage-control-plane = "codex_imessage_control_plane:main"
codex-imessage-notify = "codex_imessage_notify:main"
codex-imessage-outbound = "codex_imessage_outbound_lib:main"
codex-imessage-reply = "codex_imessage_reply_lib:main"
