[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-imessage-control-plane"
version = "0.1.0"
description = "macOS control-plane runtime bridging Codex/Claude sessions and iMessage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "agent-imessage-control-plane contributors" }
]
keywords = ["agent-chat", "codex", "claude", "imessage", "macos", "automation", "control-plane"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example-org/agent-chat"
Repository = "https://github.com/example-org/agent-chat"
Issues = "https://github.com/example-org/agent-chat/issues"

[tool.setuptools]
py-modules = [
  "agent_imessage_control_plane",
  "agent_imessage_dedupe",
  "agent_imessage_notify",
  "agent_imessage_outbound_lib",
  "agent_imessage_reply_lib",
  "codex_imessage_control_plane",
  "codex_imessage_dedupe",
  "codex_imessage_notify",
  "codex_imessage_outbound_lib",
  "codex_imessage_reply_lib"
]

[project.scripts]
agent-imessage-control-plane = "agent_imessage_control_plane:main"
agent-imessage-notify = "agent_imessage_notify:main"
agent-imessage-outbound = "agent_imessage_outbound_lib:main"
agent-imessage-reply = "agent_imessage_reply_lib:main"
codex-imessage-control-plane = "codex_imessage_control_plane:main"
codex-imessage-notify = "codex_imessage_notify:main"
codex-imessage-outbound = "codex_imessage_outbound_lib:main"
codex-imessage-reply = "codex_imessage_reply_lib:main"
