[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-chat-control-plane"
version = "0.1.0"
description = "macOS control-plane runtime bridging Codex/Claude sessions with iMessage and Telegram"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "agent-chat-control-plane contributors" }
]
keywords = ["agent-chat", "codex", "claude", "imessage", "telegram", "macos", "automation", "control-plane"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example-org/agent-chat"
Repository = "https://github.com/example-org/agent-chat"
Issues = "https://github.com/example-org/agent-chat/issues"

[tool.setuptools]
py-modules = [
  "agent_chat_control_plane",
  "agent_chat_dedupe",
  "agent_chat_notify",
  "agent_chat_outbound_lib",
  "agent_chat_reply_lib"
]

[project.scripts]
agent-chat-control-plane = "agent_chat_control_plane:main"
agent-chat-notify = "agent_chat_notify:main"
agent-chat-outbound = "agent_chat_outbound_lib:main"
agent-chat-reply = "agent_chat_reply_lib:main"
